xrpl-wasm-stdlib/xrpl-macros/tests/pubkey/fail_wrong_length.stderr
error: Invalid key: 02C7387FFC
 --> tests/pubkey/fail_wrong_length.rs:5:13
  |
5 |     pubkey!("02C7387FFC");
  |             ^^^^^^^^^^^^
